[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gradio-tunneling"
version = "0.7.0"
requires-python = ">=3.8"
description = "A tool to help you expose your non gradio app using gradio"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.scripts]
gradio-tun = "gradio_tunneling.main:main"
gradio-tunneling = "gradio_tunneling.main:main"

[tool.hatch.build]
packages = ["gradio_tunneling"]
include = [
    "gradio_tunneling/frpc*",
]

[tool.hatch.build.targets.wheel]
packages = ["gradio_tunneling"]
include = ["gradio_tunneling/frpc*"]
artifacts = ["gradio_tunneling/frpc*"]

[tool.hatch.build.targets.sdist]
include = ["README.md", "LICENSE", "gradio_tunneling/frpc*"]



